--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name= "com.kodex.guide.ui.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -10,13 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BookMarketCompose"
+        android:theme="@style/Theme.Guide"
         tools:targetApi="31">
         <activity
             android:name="com.kodex.guide.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.BookMarketCompose">
+            android:theme="@style/Theme.Guide">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
