--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,8 @@ hiltNavigationCompose = "1.2.0"
 kspPlugin = "2.1.10-1.0.30"
 hiltPlugin = "2.55"
 
+pagingVersion = "3.3.6"
+
 
 
 
@@ -62,6 +64,7 @@ android-hilt-compiler = {module = "com.google.dagger:hilt-android-compiler", ver
 hilt-navigation-compose = {module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose"}
 hilt-navigation-compose-compiler = {module = "androidx.hilt:hilt-compiler", version.ref = "hiltNavigationCompose"}
 
+androidx-paging = {group = "androidx.paging", name = "paging-compose", version.ref = "pagingVersion"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
